wip: update user
