# api/src/main/kotlin/com/example/api/controller/user/UserControllerImpl.kt
@@ -45,7 +45,19 @@ class UserControllerImpl(
             User(
                 userId = UUID.randomUUID(),
                 userName = createUser.userName
-            ), HttpStatus.OK
+            ), HttpStatus.CREATED
+        )
+    }
+
+    override fun updateUser(userId: UUID, user: User): ResponseEntity<User> {
+        val targetRecord = userDriver.fetchUser(userId) ?: return ResponseEntity(HttpStatus.NOT_FOUND)
+        val id = targetRecord.userId ?: return ResponseEntity(HttpStatus.NOT_FOUND)
+        val userName = targetRecord.username ?: return ResponseEntity(HttpStatus.NOT_FOUND)
+        return ResponseEntity(
+            User(
+                userId = id,
+                userName = user.userName
+            ), HttpStatus.CREATED
         )
     }
 }
