# front/src/feature/users/api/updateUser.ts
@@ -1,0 +1,5 @@
+import {userApi} from "@/infrastructure/openApiRepositories.ts";
+
+export const updateUser = async (updateUser: {userId: string, userName: string}) => {
+  await userApi.updateUser(updateUser.userId, updateUser)
+}
